--- a/config-starter.yml
+++ b/config-starter.yml
@@ -13,34 +13,58 @@ starter:
   ## 図やスクリーンショットが多くてコンパイルに時間がかかるときに便利。
   draft: false
 
+  ## 用紙サイズ
+  ## ・A5 … コロコロコミック、ボンボン、LaLa DXの大きさ
+  ## ・B5 … 少年ジャンプ、ジャポニカ学習帳の大きさ
+  pagesize:  A5            # A5 or B5
+
+  ## フォントサイズ
+  ## ・A5なら「9pt」、B5なら「10pt」を推奨
+  ## ・初心者向け入門書なら大きめにして、A5「10pt」、B5「11pt」を推奨
+  fontsize:  9pt           # 9pt or 10pt
+
+  ## 本文幅
+  ## ・A5 9ptなら「38zw」か「39zw」、A5 10ptなら「35zw」を推奨
+  ## ・B5 10ptなら「44zw」か「45zw」、B5 11ptなら「41zw」を推奨
+  textwidth: 38zw          # 全角の文字数で指定
+
+  ## 本文のフォント（注：実験的）
+  ## （Notoフォントが前提なので、Docker環境が必要。MacTeXでは使わないこと）
+  fontfamily_ja: mincho    # (日本語) mincho: 明朝体, gothic: ゴシック体
+  fontfamily_en: roman     # (英数字) roman: ローマン体, sansserif: サンセリフ体
+  fontweight_ja: normal    # (日本語) normal: 通常, light: 細字
+  fontweight_en: normal    # (英数字) normal: 通常, light: 細字
+
   ## 章 (Chapter) タイトルの装飾
   ## （none: なし、underline: 下線、boldlines: 上下に太線）
   chapter_decoration: underline
 
   ## 章 (Chapter) タイトルの左寄せ/右寄せ/中央揃え
   ## （left: 左寄せ、right: 右寄せ、center: 中央揃え）
-  chapter_align: left
+  chapter_align: center
 
   ## 章 (Chapter) タイトルを1行にする（章番号とタイトルとの間で改行しない）
-  chapter_oneline: true
+  chapter_oneline: false
 
   ## 節 (Section) ごとに改ページするか
   ## （ただし各章の最初の節は改ページしない）
   section_newpage: false
 
   ## ページ先頭なら節や項のタイトルの前にスペースを入れない
+  ## （obsolete: 現在は常にtrue扱い）
   section_notopmargin: true
 
   ## 節 (Section) タイトルの装飾
-  ## （none: なし、underline: 下線、grayback: 灰色の背景色）
-  section_decoration: grayback
+  ## （none: なし、underline: 下線、grayback: 灰色の背景色、leftline: 左に縦線, numbox: 節番号を黒背景に）
+  ## （節タイトルが長くて二行になる場合は「leftline」または「numbox」がお勧め）
+  section_decoration: numbox
 
   ## 項 (Subsection) タイトルの装飾
   ## （none: なし、symbol: 先頭にクローバー）
-  subsection_decoration: none
+  subsection_decoration: symbol
 
   ## プログラムやターミナルのキャプションを小さくするか？
-  caption_small: true
+  caption_small: false
 
   ## キャプションの見映えをよくするか？
   caption_pretty: true
@@ -48,13 +72,13 @@ starter:
   ## キャプション直後での改ページを防ぐために、最低限必要とする高さ
   ## （もしキャプション直後での改ページが発生するなら値を増やす。
   ##   もし十分なスペースがあるのに改ページされるなら値を減らす。）
-  caption_needspace: 4.8zh        # 全角文字4.8個分の高さ（実験で得た境界値）
+  caption_needspace: 4.6zh        # 全角文字4.6個分の高さ（実験で得た境界値）
 
   ## プログラム（//list）のフォントサイズ
-  program_fontsize: small  # 'normal' or 'small'
+  program_fontsize: normal  # 'normal' or 'small'
 
   ## ターミナル（//cmd, //terminal）のフォントサイズ
-  terminal_fontsize: small  # 'normal' or 'small'
+  terminal_fontsize: normal  # 'normal' or 'small'
 
   ## プログラム用（//list）の等幅フォント。
   ##  * lmodern … LaTeXのデフォルト。1とl、0とOが見分けにくい。太字が目立たない。
@@ -96,13 +120,20 @@ starter:
 
   ## 画像が現在位置に入りきらず次ページに送られたとき、後続のテキストを現在位置に
   ## 流し込むかどうか。流し込まないと現在位置に大きなスペースができてしまう。
-  ## またLaTeXの位置指定(t:top, b:bottom, p:posision)も指定可能。
-  image_position: H    # 現在位置にスペースが空く（要float.sty）
-  #image_position: h   # 現在位置に後続テキストを流し込む
+  ## またLaTeXの位置指定(t:top, b:bottom, p:page)も指定可能。
+  #image_position: H   # 現在位置にスペースが空く（要float.sty）
+  image_position: h    # 現在位置に後続テキストを流し込む
 
+  ## （obsolete、現在では常にtrue扱い）
   ## 十分なスペースがあるのに節や項のタイトル直前で改ページされるのを避ける。
   ## （LaTeXのデフォルトでは、ページ最下部の段落が最初の1行だけになるのを嫌う。
   ##   そのため、節(Section)のタイトル直後が1行だけで改ページされるくらいなら
   ##   節タイトルの直前で改ページすることをLaTeXは選ぶ。
   ##   このせいで、十分な空きがあるのに節タイトル前で改ページされることがある。）
   page_clubline: true      # trueなら改ページを避ける
+
+  ## リンクのURLを脚注に埋め込む（PDFでのみ）。
+  linkurl_footnote: true   # trueならリンクのURLを脚注に埋め込む（お勧め）
+
+  ## @<secref>{}において、親の節のタイトルを含めるか？
+  secref_parenttitle: false # trueなら親の節のタイトルを含める
