--- a/.github/workflows/pdf.yml
+++ b/.github/workflows/pdf.yml
@@ -5,7 +5,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@master
       - uses: docker://kauplan/review2.5
       - run: docker run --rm -v $PWD:/work -w /work kauplan/review2.5 rake pdf
       - name: Get Repository Name
