--- a/.github/workflows/pdf.yml
+++ b/.github/workflows/pdf.yml
@@ -5,7 +5,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@main
       - uses: docker://kauplan/review2.5
       - run: docker run --rm -v $PWD:/work kauplan/review2.5 /bin/bash -c "cd /work; rake pdf"
       - name: Get Repository Name
